# rust-todo-app

./: .gitignore  README.md
backend/: .env  Cargo.toml
backend/migrations/2021-10-24-050342_create_todos/: up.sql
backend/src/: lib.rs  main.rs  models.rs  schema.rs
frontend/: .env  Cargo.toml  index.html
frontend/src/: main.rs
