[package]
name = "todo-app-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = { version = "1.4.5", features = ["sqlite", "chrono"] }
libsqlite3-sys = { version = "0.9.1", features = ["bundled"]}
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "main"
path = "src/main.rs"